<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Input</string>
    <string name="title_activity_myo_input">MyoInput</string>
    <string name="myo_setup">Setup Myo!</string>
    <string name="action_settings">Settings</string>
    <string name="connect_myo">Connect Myo</string>
    <string name="setup_myo">Perform setup gesture</string>
    <string name="start">Play</string>
    <string name="stop">Stop</string>
    <string name="remote_consumer">Act as a remote consumer</string>

</resources>
